@@ -1,0 +1,41 @@
+<?xml version="1.0"?>
+<arts format="ascii" version="1">
+<Array type="Vector" nelem="6">
+<Vector nelem="4">
+270.82559833977
+261.742815769264
+257.27032405571
+267.262481028704
+</Vector>
+<Vector nelem="4">
+274.113318016625
+259.679968558172
+261.67672661298
+265.57952290008
+</Vector>
+<Vector nelem="4">
+270.29139437861
+271.220250806278
+258.750389291491
+277.869365361366
+</Vector>
+<Vector nelem="4">
+218.018612839707
+259.161997858346
+211.687897484561
+254.750028333828
+</Vector>
+<Vector nelem="4">
+282.742213986255
+262.79205488492
+272.437994591269
+269.300577678993
+</Vector>
+<Vector nelem="4">
+285.037112397803
+266.35528261329
+272.862331181353
+271.997577501497
+</Vector>
+</Array>
+</arts>
